# ml_final_project

./: .gitignore  README.md  README.rst  pyproject.toml
src/my_project_demo/: data.py  eda.py  grid_NCV.py  pipeline.py  train.py
tests/: test_my_project_demo.py
